app/css/MainCard.css
#MainContainer {
    flex-direction: column;
    align-items: flex-start;
    display: flex;
    margin-top: 30px;
    max-width: 100%;
    gap: 10px;
}
.Header-Container {
    display: flex;
    flex-display: row;
    justify-content: center;
    font-size: 30px;
    text-shadow: 2px 2px 4px black;;
}
#CharCard {
    width: 250px;
}
#Header-Main-Cards{
    display: flex;
    flex-direction: row;
    gap : 10px;
}
.ProfileTextContainer {
    margin-left: 10px;
    margin-bottom: 10px;
    justify-content: flex-start;
    display: flex;
    flex-direction: column;
}
.ProfileColumn{
    display: flex;
    flex-direction: column;
}
.ProfileRow {
    display: flex;
    flex-direction: row;
}
.ProfileTextContainer h1 {
    display: flex;
    margin-bottom: 0px;
    align-self: center;
    justify-self: center;
    font-size: 30px;
}
.ProfileCard {
    display: flex;
    flex-direction: row;
    justify-content: space-around;
    width : 700px;
    height: 220px;
    background: rgba(30, 30, 30, 0.75);
    backdrop-filter: blur(10px);
    border: 4px solid rgba(0, 0, 0, 0.2);
}
.ProfileCard img {
    margin-right: 20px;
    justify-self: flex-start;
    display: flex;
    margin-left: auto;
    width: 150px !important;
    height: 150px !important;
    background: white;
    backdrop-filter: blur(10px);
    border: 4px solid rgba(0, 0, 0, 0.1);
    margin-bottom: 500px;
}
.Header-Container img {
    margin-top: 10px;
    width: 64px !important;
    height: 64px !important;

}
.Home-Container {
    display: flex;
    flex-direction: row;
    gap: 15px;
}



.RowContainer {
    display: flex;
    flex-direction: row;
    align-items: center;
    gap: 10px;
}

.TopCard {
    display: flex;
    flex-direction: row;
    justify-content: space-around;
    width : 960px;
    height: 200px;
    background: rgba(30, 30, 30, 0.75);
    backdrop-filter: blur(10px);
    border: 4px solid rgba(0, 0, 0, 0.2);
}
.TopCard img {
   width: 100%;
}
.TopCard h1 {
    font-family: 'Minecraft';
    text-shadow: 2px 2px 4px black;
    margin-top: 0px;
    letter-spacing: 2px;
    font-size: 20px;
    font-weight: normal;
    color: azure;
    text-indent: 1em;
}

.MainCard {
    display: flex;
    flex-direction: column;
    width : 700px;
    min-height: 300px;
    height: 400px;
    --drop-shadow-md: ;
    background: rgba(30, 30, 30, 0.75);
    backdrop-filter: blur(10px);
    border: 4px solid rgba(0, 0, 0, 0.2);
}
.MainCard h1 {
    font-family: 'Minecraft';
    text-shadow: 2px 2px 4px black;
    margin-top: 20px;
    letter-spacing: 2px;
    font-size: 30px;
    font-weight: normal;
    color: azure;
    text-indent: 1em;
}
.MainCard p {
    font-family: 'Minecraft';
    text-shadow: 2px 2px 4px black;
    margin-left: 10px;
    margin-top: 20px;
    letter-spacing: 2px;
    --drop-shadow-md: ;
    font-size: 25px;
    color: white;
}
.MainCard img {
    width : 150px;
    height : 150px;
}
.MainCard button:hover {
    transform: scale(1.2);
}
.Right-Corner {
    position: absolute;
    width : 250px;
    min-height: 300px;
    height: 400px;
    pointer-events: none;
}
.Right-Corner img{
    margin-top: 230px;
    margin-left: 120px;
    filter: drop-shadow(4px 4px 8px rgba(0, 0, 0, 0.5));
}

.SideCard {
    position: relative;
    display: flex;
    flex-direction: column;
    width : 250px;
    min-height: 300px;
    height: 400px;
    background: rgba(30, 30, 30, 0.75);
    backdrop-filter: blur(10px);
    border: 4px solid rgba(0, 0, 0, 0.2);
}
.SideCard h1 {
    font-family: 'Minecraft';
    text-shadow: 2px 2px 4px black;
    margin-top: 20px;
    letter-spacing: 2px;
    font-size: 30px;
    font-weight: normal;
    color: azure;
    text-indent: 0.7em;
}
.SideCard p {
    font-family: 'Minecraft';
    text-shadow: 2px 2px 4px black;
    margin-left: 10px;
    margin-top: 20px;
    letter-spacing: 2px;
    --drop-shadow-md: ;
    font-size: 25px;
    color: white;
}
.SideCard li {
    font-family: 'Minecraft';
    text-shadow: 2px 2px 4px black;
    margin-left: 10px;
    margin-top: 20px;
    letter-spacing: 2px;
    --drop-shadow-md: ;
    font-size: 15px;
    color: white;
}
.SideCard li:hover {
    transform: scale(1.05);
}
.SideCard button:hover {
    transform: scale(1.2);
}

.ItemOfTheDay {
    flex-direction: column;
    align-items: center;
    display: flex;
    margin-top: 0px;
    gap: 5px;

}
.ItemOfTheDay h1 {
    font-family: 'Minecraft';
    text-shadow: 2px 2px 4px black;
    letter-spacing: 2px;
    font-size: 12px;
    font-weight: normal;
    color: azure;
    text-indent: 0em;
}
.ItemOfTheDay p {
    font-family: 'Minecraft';
    text-shadow: 2px 2px 4px black;
    letter-spacing: 2px;
    font-size: 12px;
    font-weight: normal;
    color: azure;
    text-indent: 0em;
}
.ItemOfTheDay img {
    width: 125px;
    height: 125px;
    /*backdrop-filter: blur(10px);*/
    border: 4px solid rgba(255, 255, 255, 0.9);
    filter: drop-shadow(4px 4px 8px rgba(0, 0, 0, 0.9));
}

